xz1919: continue refactoring SemanticChecker, 6 errors left in the log